--- a/caothang/src/App.css
+++ b/caothang/src/App.css
@@ -37,51 +37,66 @@
   }
 }
 
-.my_app{
-  color: blue;
+
+.header{
+  background: gainsboro;
+  max-width: 100%;
+  height: 45px;
+  padding: 5px 20px;
+  font-size:25px;
+  color: aliceblue;
 }
-
-header{
-  background-color: grey;
-  width: 100%;
-  height: 50px;
-}
-
-
-main{
-
+.left{
+ 
+  width: 287px;
+  height:430px;
   float: left;
-  margin: 40px 20px;
-  max-width: 50%;
+}
+.content{
+  padding: 20px;
+  width: 685px;
+  height: 430px;
+  float: left;
+  overflow-wrap: break-word;
   
 }
-
-.section_1{
+.content img{
+  width: 650px;
+  height: 300px;
+  text-align: center;
+}
+.right{
+  background: #61dafb;
+  width: 377px;
+  height: 430px;
   float: left;
-  width: 19%; 
-  height: 220px;
 }
 
-.section_1 ul{
+.right ul{
   list-style: none;
+  margin-top: 20px;
+}
+.right ul li{
+  padding-bottom: 10px;
 }
 
-.section_1 ul .my_list{
-  
-  padding-left: 0;
-  padding: 30px 0;
-  border-bottom: solid 1px;
+.footer{
+  background-color: greenyellow;
+  width: 100%;
+  height: 30px;
+  clear: both;
 }
 
-.section_2{
-  float: right;
-  width: 19%; 
-  height: 20px;
+.left ul{
+  list-style: none;
+  margin-top: 20px;
+  padding: 0px;
+  padding-right: 5px;
 }
-
-.section_2 ul .my_list{
-  
-  padding-left: 0;
-  padding: 30px 0;
-  border-bottom: solid 1px;
+.left ul li{
+  margin-bottom: 10px;
+  border-bottom: solid 2px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  vertical-align: middle;
 }
